18-project-1/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: udayvarmora.xyz
      http:
        paths:
          - path: /
            backend:
              service:
                name: react
                port:
                  number: 80
            pathType: Prefix
